# MOH_National_Health_Planning_Monitoring_Budgeting_sYSTEM

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: ci-api.yml  ci-web.yml  security.yml
apps/web/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(platform)/: layout.tsx
apps/web/src/app/(platform)/admin/: page.tsx
apps/web/src/app/(platform)/audit/: page.tsx
apps/web/src/app/(platform)/awps/: page.tsx
apps/web/src/app/(platform)/awps/[id]/: page.tsx
apps/web/src/app/(platform)/awps/new/: page.tsx
apps/web/src/app/(platform)/dashboard/: page.tsx
apps/web/src/app/(platform)/indicators/: page.tsx
apps/web/src/app/(platform)/programmes/: page.tsx
apps/web/src/app/(platform)/reports/: page.tsx
apps/web/src/app/(platform)/strategy/: page.tsx
apps/web/src/app/(platform)/users/: page.tsx
apps/web/src/app/login/: actions.ts  page.tsx
apps/web/src/app/login/error/: page.tsx
apps/web/src/components/: theme-provider.tsx  theme-toggle.tsx
apps/web/src/components/brand/: ministry-logo.tsx
apps/web/src/components/layout/: sidebar.tsx  topbar.tsx
apps/web/src/components/ui/: button.tsx  status-pill.tsx
apps/web/src/lib/: api-client.ts  auth.ts  cn.ts  query-client.tsx
data/: README.md
docs/: 01-high-level-architecture.md  02-system-modules.md  03-database-schema.md  04-development-roadmap.md  05-mvp-scope.md  06-deploy-vercel.md
infra/: README.md  docker-compose.dev.yml
infra/docker/keycloak/: bootstrap-dev-user.sh  nhpmbr-realm.json
infra/docker/postgres/init/: 00-extensions.sql
services/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schemas_and_foundation.py  0002_strategy_planning_workflow_doc_audit.py
services/api/app/: __init__.py  main.py
services/api/app/core/: __init__.py  config.py  db.py  deps.py  errors.py  logging.py  middleware.py  security.py  telemetry.py
services/api/app/modules/: __init__.py
services/api/app/modules/audit/: __init__.py  api.py  models.py  router.py
services/api/app/modules/doc/: __init__.py  api.py  models.py  router.py
services/api/app/modules/iam/: __init__.py  api.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/mdm/: __init__.py  api.py  models.py  router.py
services/api/app/modules/org/: __init__.py  api.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/planning/: __init__.py  api.py  models.py  repository.py  router.py  schemas.py  service.py
services/api/app/modules/strategy/: __init__.py  api.py  models.py  router.py
services/api/app/modules/workflow/: __init__.py  api.py  models.py  router.py
services/api/tests/: conftest.py  test_audit_hash_chain.py  test_health.py  test_planning_state_machine.py
