[project]
name = "nhpmbr-api"
version = "0.1.0"
description = "NHPMBR FastAPI backend — modular monolith for national health planning."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary — Ministry of Health" }
authors = [{ name = "NHPMBR Engineering" }]

dependencies = [
    # --- Web framework ---
    "fastapi[standard]==0.115.2",
    "uvicorn[standard]==0.32.0",
    "starlette==0.40.0",

    # --- Validation / config ---
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "email-validator==2.2.0",

    # --- Database ---
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "psycopg[binary]==3.2.3",
    "alembic==1.13.3",
    "geoalchemy2==0.15.2",

    # --- Identity / auth ---
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "httpx==0.27.2",
    "PyJWT[crypto]==2.9.0",

    # --- Object storage ---
    "boto3==1.35.36",

    # --- Async / queues ---
    "celery[redis]==5.4.0",
    "redis==5.0.8",

    # --- Observability ---
    "structlog==24.4.0",
    "opentelemetry-api==1.27.0",
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-sqlalchemy==0.48b0",
    "opentelemetry-exporter-otlp-proto-http==1.27.0",
    "sentry-sdk[fastapi]==2.16.0",

    # --- Utils ---
    "tenacity==9.0.0",
    "ulid-py==1.1.0",
    "orjson==3.10.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-python-jose==3.3.4.20240106",
    "import-linter==2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "SIM",               # simplify
    "RUF",               # ruff-specific
    "ASYNC",             # async best practices
    "S",                 # bandit
    "N",                 # pep8-naming
    "PL",                # pylint subset
]
ignore = [
    "S101",   # assert (we use pytest)
    "PLR0913", # too many args (FastAPI deps)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]
"alembic/**" = ["E501", "N999"]

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions", "tests/fixtures"]

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: requires running database",
    "slow: long-running test",
]

# ---------- import-linter (module boundaries) ----------
[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Module boundary: each domain module is independent"
type = "independence"
modules = [
    "app.modules.iam",
    "app.modules.org",
    "app.modules.mdm",
    "app.modules.strategy",
    "app.modules.planning",
    "app.modules.workflow",
    "app.modules.doc",
    "app.modules.audit",
]
ignore_imports = [
    "app.modules.* -> app.modules.*.api",
]
